--- a/translations/items+intl-icu.en.xlf
+++ b/translations/items+intl-icu.en.xlf
@@ -9200,5 +9200,27 @@ You put every effort into it. Then, after some time passes, you retrieve a {item
         <target>Use an object from my rucksack</target>
       </segment>
     </unit>
+    <unit id="nPvnmuP" name="Die Batterie fällt ein paar Meter entfernt auf den Boden.">
+      <notes>
+        <note category="german">Die Batterie fällt ein paar Meter entfernt auf den Boden.</note>
+        <note category="from">db://AffectMessage</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Die Batterie fällt ein paar Meter entfernt auf den Boden.</source>
+        <target>Die Batterie fällt ein paar Meter entfernt auf den Boden.</target>
+      </segment>
+    </unit>
+    <unit id="WgEgCbq" name="Die Batterie wurde beim Aufprall vollständig zerstört.">
+      <notes>
+        <note category="german">Die Batterie wurde beim Aufprall vollständig zerstört.</note>
+        <note category="from">db://AffectMessage</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Die Batterie wurde beim Aufprall vollständig zerstört.</source>
+        <target>Die Batterie wurde beim Aufprall vollständig zerstört.</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
