EN Translation for alpha + beta distinction

--- a/translations/game+intl-icu.en.xlf
+++ b/translations/game+intl-icu.en.xlf
@@ -16123,7 +16123,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
       </notes>
       <segment>
         <source>Beta-Tester der neuen Zeit</source>
-        <target>Beta-Tester der neuen Zeit</target>
+        <target>Next gen Beta-Tester</target>
       </segment>
     </unit>
     <unit id="V.GaRUl" name="Sind wir noch in der Alpha?">
@@ -16134,7 +16134,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
       </notes>
       <segment>
         <source>Sind wir noch in der Alpha?</source>
-        <target>Sind wir noch in der Alpha?</target>
+        <target>Are we still in the Alpha?</target>
       </segment>
     </unit>
     <unit id="OA64trN">
@@ -16145,7 +16145,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
       </notes>
       <segment>
         <source>Dies ist eine äußerst seltene Belohnung, die den ersten MyHordes-Spielern vorbehalten ist, die das Finale mit großem F erlebt haben.</source>
-        <target>Dies ist eine äußerst seltene Belohnung, die den ersten MyHordes-Spielern vorbehalten ist, die das Finale mit großem F erlebt haben.</target>
+        <target>This is an extremely rare reward reserved for the first MyHordes players to experience the final with a capital F.</target>
       </segment>
     </unit>
     <unit id="OnjQ_HM" name="Keine Fehler hi&amp;e%12;r">
