--- a/translations/items+intl-icu.en.xlf
+++ b/translations/items+intl-icu.en.xlf
@@ -7939,7 +7939,7 @@ You put every effort into it. Then, after some time passes, you retrieve a {item
       </notes>
       <segment>
         <source>Den Shamane wählen</source>
-        <target>Den Shamane wählen</target>
+        <target>Vote for the Shaman</target>
       </segment>
     </unit>
     <unit id="Rrvjw6U" name="Den Reiseleiter in der Außenwelt wählen">
@@ -7950,7 +7950,7 @@ You put every effort into it. Then, after some time passes, you retrieve a {item
       </notes>
       <segment>
         <source>Den Reiseleiter in der Außenwelt wählen</source>
-        <target>Den Reiseleiter in der Außenwelt wählen</target>
+        <target>Vote for the Guide to the World Beyond</target>
       </segment>
     </unit>
     <unit id="jHDRi5S">
