--- a/translations/admin+intl-icu.fr.xlf
+++ b/translations/admin+intl-icu.fr.xlf
@@ -3915,5 +3915,15 @@
         <target>Valeur actuelle</target>
       </segment>
     </unit>
+    <unit id="PhzdczW" name="Eskortierte Bürger teleportieren">
+      <notes>
+        <note category="german">Eskortierte Bürger teleportieren</note>
+        <note category="from">twig:///templates/ajax/admin/widget/controls.twig</note>
+      </notes>
+      <segment>
+        <source>Eskortierte Bürger teleportieren</source>
+        <target>Téléporter les citoyens escortés</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
